--- a/_config.yml
+++ b/_config.yml
@@ -1,8 +1,8 @@
-title: Just the Docs Template
-description: A starter template for a Jeykll site using the Just the Docs theme!
+title: 数据库原理与应用
+description: Principles of Database and Application
 theme: just-the-docs
 
-url: https://just-the-docs.github.io
+url: https://abotw.github.io/db
 
 aux_links:
-  Template Repository: https://github.com/just-the-docs/just-the-docs-template
+  Template Repository: https://github.com/abotw/db
