--- a/_config.yml
+++ b/_config.yml
@@ -5,4 +5,5 @@ theme: just-the-docs
 url: https://abotw.github.io/db
 
 aux_links:
-  Template Repository: https://github.com/abotw/db
+  Repo: https://github.com/abotw/db
+  头歌: https://www.educoder.net/
